<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home_title"/>
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_person_24"
        android:title="@string/user_title"/>
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorites_title"/>
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_paw"
        android:title="@string/report_title"/>
    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_store_24"
        android:title="@string/store_title"/>
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart_24"
        android:title="@string/cart_title"/>
</menu>
